--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Sofia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Orbitron&family=Sofia&display=swap');
+
 
 /* Phones and handhelds */
 /* ----------- iPhone 4 and 4S ----------- */
@@ -379,6 +380,7 @@
 
 body {
     background-color: #333333;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #sideBar {
@@ -389,4 +391,23 @@ body {
     border-radius: 50px;
     background-color: whitesmoke;
     justify-content:center;
+    margin-top: 2%;
+    margin-left: 1em;
+    box-shadow: 5px 5px 8px rgba(0,0,0,0.5);
+}
+
+.sideBarImage {
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid white;
+    margin-left: 5.5em;
+    padding: 3px;
 }
