--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@
 
 
 body {
-    background-color: #333333;
+    background-color: #999999;
     font-family: 'Orbitron', sans-serif;
 }
 
@@ -394,9 +394,21 @@ body {
     margin-top: 2%;
     margin-left: 1em;
     box-shadow: 5px 5px 8px rgba(0,0,0,0.5);
+    transition: all 1s;
+}
+
+#sideBar > img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+#sideBar > a:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 .sideBarImage {
+    padding-top: 5px;
     padding-bottom: 15px;
     padding-left: 5px;
     padding-right: 5px;
@@ -410,4 +422,25 @@ header {
     border: 2px solid white;
     margin-left: 5.5em;
     padding: 3px;
+    margin-bottom: 130px;
+}
+
+nav {
+    margin-left: 5.5em;
+    border: 2px solid white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav > span {
+    padding: 5px;
+    font-size: 30px;
+    transition: all 1s;
+}
+
+nav > span:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
