--- a/style.css
+++ b/style.css
@@ -426,27 +426,89 @@ header {
 }
 
 nav {
-    margin-left: 5.5em;
+    /* margin-left: 5.5em; */
     border: 2px solid white;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 nav > span {
-    padding: 5px;
-    font-size: 30px;
-    transition: all 1s;
+    border: 5px solid black;
+    border-radius: 80px;
+    background-color: whitesmoke;
+    padding: 35px;
+    margin-top: 20px;
+    font-size: 150%;
 }
 
 nav > span:hover {
-    transform: scale(1.1);
     cursor: pointer;
 }
 
+#techSkillsSection {
+    margin-top: 150px;
+    border: 2px solid white;
+    text-align: center;
+}
+
+#techSkillsSection> h3 {
+    padding: 24px;
+    font-size: 200%;
+}
+
+#techSkillsSection > div {
+    border: 2px solid white;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#techSkillsSection > div > img {
+    padding: 30px;
+    border: 5px solid black;
+    border-radius: 80px;
+}
+
+#projectSection {
+    margin-top: 1050px;
+}
+
+#expSection {
+    margin-top: 1050px;
+}
+
+#bioSection {
+    margin-top: 1050px;
+}
+
+
+
+
+
+
+
+
+
+span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid black;
+    border-radius: 80px;
+    background-color: whitesmoke;
+    padding: 35px;
+    margin-top: 20px;
+    font-size: 150%;
+}
+
+
 footer {
-    margin-top: 4000px;
+    margin-top: 100px;
     margin-left: 5.5em;
     border: 2px solid white;
     display: flex;
