--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ header {
     align-items: center;
     margin-left: 5.5em;
     padding: 3px;
-    margin-bottom: 130px;
+    margin-bottom: 180px;
 }
 
 header > h1 {
@@ -445,13 +445,13 @@ nav {
 }
 
 nav > span {
-    border: 5px solid black;
+    border: 5px solid rgba(0, 0, 0, 0.678);
     border-radius: 80px;
-    background-color: whitesmoke;
+    background-color: #400000;
     padding: 35px;
     margin-top: 20px;
     font-size: 150%;
-    color: black;
+    color: whitesmoke;
     transition: all 1s;
 }
 
