--- a/style.css
+++ b/style.css
@@ -479,6 +479,10 @@ nav > span:hover {
 }
 
 #techSkillsSection > div > img {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 15px;
+    margin-bottom: 15px;
     padding: 30px;
     border: 5px solid black;
     border-radius: 35px;
@@ -486,6 +490,7 @@ nav > span:hover {
 }
 
 #techSkillsSection-galery {
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -523,6 +528,7 @@ nav > span:hover {
     background-color: #111111;
     font-size: 140%;
 }
+
 
 
 
